css/ui/base.css
/* ... */
	.paneTop {
		margin-top: -266px;
		height: 270px;
		padding: 20px 60px;
		padding-top: 70px;
	}

		.paneTop:hover {
			margin-top: 0;
		}

		.paneTop .paneToggle {
			position: absolute;
			left: 40px;
			bottom: -70px;
			font-size: 36px;
			padding: 20px 20px 0 20px;
		}

	.paneSplit {
		display: table-cell;
		height: 100%;
		position: relative;
	}

	.paneRight {
		width: 40px;
		-webkit-transition-duration: 500ms;
	}

		#paneRightPinState:checked + .wrap .paneRight,
		.paneRight:hover {
			width: 400px;
		}

		.paneRight .pane {
			height: 100%;
			width: 400px;
			overflow: hidden;
			position: absolute;
			left: 0;
			top: 0;
			padding: 40px;
		}

		.paneRight .paneToggle {
			position: absolute;
			left: 5px;
			top: 60px;
			font-size: 26px;
		}

		.paneRight .panePin {
			position: absolute;
			left: 5px;
			top: 20px;
			font-size: 26px;
			color: #888;
		}

			.paneRight .panePin label {
				cursor: pointer;
			}

			.paneRight .panePin:hover {
				color: #666;
			}

			#paneRightPinState:checked + .wrap .panePin {
				color: #111;
			}

.paneStoryEdit {

}

.topBar {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	height: 40px;
	padding: 10px 60px;
	background: #111;
}

.panePassages .list-passages {
}

	.panePassages .list-passages li {
		margin: 1em 0;
	}

		.panePassages .list-passages li a .badge {
			background: #428bca;
			color: #eee;
		}

		.panePassages .scrollable {
			margin-top: 2em;
			height: calc(100% - 130px);
		}




/**
 * Stories
 .d8888b. 888                  d8b                 
d88P  Y88b888                  Y8P                 
Y88b.     888                                      
 "Y888b.  888888 .d88b. 888d888888 .d88b. .d8888b  
    "Y88b.888   d88""88b888P"  888d8P  Y8b88K      
      "888888   888  888888    88888888888"Y8888b. 
Y88b  d88PY88b. Y88..88P888    888Y8b.         X88 
 "Y8888P"  "Y888 "Y88P" 888    888 "Y8888  88888P' 
**/
.menuTop {
	padding-top: 40px;
}

	.menuTop ul {
		margin: 0;
		padding: 20px 60px;
	}

.storiesListMenu {
	padding-top: 20px;
}

.storiesList {
	padding-bottom: 200px;
}

	.storiesList li > div {
		position: relative;
		background: #ccc;
		padding: 10px;
		height: 325px;
		margin-top: 40px;
	}

	.storiesList h3 {
		margin-top: 0;
	}

	.storiesList p {
		margin-top: 1em;
	}

	.storiesList .list-icon-menu {
		position: absolute;
		left: 10px;
		bottom: 0;
	}



/**
 * Passage
8888888b.                                                  
888   Y88b                                                 
888    888                                                 
888   d88P 8888b. .d8888b .d8888b  8888b.  .d88b.  .d88b.  
8888888P"     "88b88K     88K         "88bd88P"88bd8P  Y8b 
888       .d888888"Y8888b."Y8888b..d888888888  88888888888 
888       888  888     X88     X88888  888Y88b 888Y8b.     
888       "Y888888 88888P' 88888P'"Y888888 "Y88888 "Y8888  
                                               888         
                                          Y8b d88P         
                                           "Y88P"          
**/
.scrollPassages {
	background: #ccc;
}

.passage {
	background: #eee;
	width: 80%;
	max-width: 700px;
	margin: 40px auto;
	padding: 20px;
}

	.passage > div {
		margin-top: 40px;
	}

		.passage > div:first-child {
			margin-top: 0;
		}




/**
 * Entrances
8888888888        888                                                   
888               888                                                   
888               888                                                   
8888888   88888b. 888888888d888 8888b. 88888b.  .d8888b .d88b. .d8888b  
888       888 "88b888   888P"      "88b888 "88bd88P"   d8P  Y8b88K      
888       888  888888   888    .d888888888  888888     88888888"Y8888b. 
888       888  888Y88b. 888    888  888888  888Y88b.   Y8b.         X88 
8888888888888  888 "Y888888    "Y888888888  888 "Y8888P "Y8888  88888P' 
**/
.passageBack,
.passageLink {
	display: inline-block;
	position: relative;
	background: #428bca;
	color: #eee;
	text-align: right;
	min-width: 3em;
	border: none;
	height: 2em;
	margin: 0 1em;
	padding: 0 5px;
	padding-right: 22px;
}

	.passageBack:before,
	.passageLink:before {
		content: " ";
		position: absolute;
		left: -0.95em;
		top: 0;
		border-right: 1em solid #428bca;
		border-top: 1em solid transparent;
		border-bottom: 1em solid transparent;
	}

	.badge[data-choices] {
		position: relative;
		padding-right: 22px;
	}

	.badge[data-choices]:after,
	.passageBack:after,
	.passageLink:after {
		content: " ";
		position: absolute;
		right: 5px;
		top: 0;
		bottom: 0;
		margin: auto;
		width: 14px;
		height: 14px;
		background: url(../../img/icon-choices-14x14.png) 0 -14px no-repeat;
	}

		.badge[data-choices="1"]:after, .passageBack[data-choices="1"]:after,
		.passageLink[data-choices="1"]:after {background-position: -14px -14px;}
		.badge[data-choices="2"]:after, .passageBack[data-choices="2"]:after,
		.passageLink[data-choices="2"]:after {background-position: -28px -14px;}
		.badge[data-choices="3"]:after, .passageBack[data-choices="3"]:after,
		.passageLink[data-choices="3"]:after {background-position: -42px -14px;}
		.badge[data-choices="4"]:after, .passageBack[data-choices="4"]:after,
		.passageLink[data-choices="4"]:after {background-position: -56px -14px;}
		.badge[data-choices="5"]:after, .passageBack[data-choices="5"]:after,
		.passageLink[data-choices="5"]:after {background-position: -70px -14px;}
		.badge[data-choices="6"]:after, .passageBack[data-choices="6"]:after,
		.passageLink[data-choices="6"]:after {background-position: -84px -14px;}
		.badge[data-choices="7"]:after, .passageBack[data-choices="7"]:after,
		.passageLink[data-choices="7"]:after {background-position: -98px -14px;}
		.badge[data-choices="8"]:after, .passageBack[data-choices="8"]:after,
		.passageLink[data-choices="8"]:after {background-position: -112px -14px;}
/* ... */

